--- a/pages/double-hand-detection.html
+++ b/pages/double-hand-detection.html
@@ -522,18 +522,27 @@
 
     <script>
         /**
-         * DOUBLE HAND DETECTION - CLEAN REWRITE
-         * Optimized for Speed (25+ FPS) and Accuracy
+         * DOUBLE HAND DETECTION - OPTIMIZED REWRITE
+         * - Uses KKVP_NEW.ONNX (Correct Model)
+         * - Letterboxing (Padding) instead of Stretching (Exact Accuracy)
+         * - NMS (Non-Max Suppression) to filter ghost boxes
+         * - THROTTLED LOOP (150ms delay) to prevent freezing/high RAM
          */
         (function () {
             'use strict';
 
             // =================================================================
-            // CONFIGURATION - SIMPLE AND FAST
+            // CONFIGURATION
             // =================================================================
-            const MODEL_PATH = '../ml/models/kkvp_new.onnx';
-            const CLASSES = ['Anjali', 'MATSYA', 'Naagabandha', 'SVASTIKA', 'berunda', 'chakra', 'garuda', 'karkota', 'katariswastika', 'pasha', 'pushpantha', 'shanka', 'shivalinga'];
-            const CONF_THRESHOLD = 0.35;  // Detection threshold
+            const MODEL_PATH = '../ml/models/kkvp_new.onnx'; // CORRECT PATH
+            const CLASSES = [
+                'Anjali', 'MATSYA', 'Naagabandha', 'SVASTIKA',
+                'berunda', 'chakra', 'garuda', 'karkota',
+                'katariswastika', 'katva', 'pasha',
+                'pushpantha', 'shanka', 'shivalinga'
+            ];
+            const CONF_THRESHOLD = 0.35;
+            const DETECTION_INTERVAL = 150; // ms (Limit to ~6 FPS to save RAM/CPU)
 
             const MEANINGS = {
                 'Anjali': 'Salutation - Prayer, greeting',
@@ -552,7 +561,7 @@
             };
 
             // =================================================================
-            // STATE - MINIMAL
+            // STATE
             // =================================================================
             let session = null;
             let video = null;
@@ -561,8 +570,9 @@
             let startTime = 0;
             let uniqueMap = {};
             let lastMudra = null;
+            let lastDetectTime = 0;
 
-            // Pre-allocated buffer for speed
+            // Pre-allocated buffers
             const tensorBuffer = new Float32Array(3 * 640 * 640);
             let prepCanvas = null, prepCtx = null;
 
@@ -580,15 +590,14 @@
                 text.textContent = 'Loading AI...';
 
                 try {
-                    ort.env.wasm.numThreads = 4;
+                    // Reduce thread count to prevent locking main thread
+                    ort.env.wasm.numThreads = 2;
                     ort.env.wasm.simd = true;
 
                     session = await ort.InferenceSession.create(MODEL_PATH, {
                         executionProviders: ['wasm'],
                         graphOptimizationLevel: 'all'
                     });
-
-                    // Model loaded
 
                     status.className = 'api-status connected';
                     status.innerHTML = '<span>●</span> Ready';
@@ -604,7 +613,7 @@
             }
 
             // =================================================================
-            // PREPROCESS - FAST
+            // PREPROCESS - LETTERBOXING (Accurate)
             // =================================================================
             function preprocess() {
                 if (!prepCanvas) {
@@ -614,7 +623,20 @@
                     prepCtx = prepCanvas.getContext('2d', { willReadFrequently: true });
                 }
 
-                prepCtx.drawImage(video, 0, 0, 640, 640);
+                // 1. Fill with neutral gray
+                prepCtx.fillStyle = '#727272';
+                prepCtx.fillRect(0, 0, 640, 640);
+
+                // 2. Calculate scale to fit
+                const scale = Math.min(640 / video.videoWidth, 640 / video.videoHeight);
+                const w = video.videoWidth * scale;
+                const h = video.videoHeight * scale;
+
+                // 3. Center image
+                const x = (640 - w) / 2;
+                const y = (640 - h) / 2;
+
+                prepCtx.drawImage(video, x, y, w, h);
                 const { data } = prepCtx.getImageData(0, 0, 640, 640);
 
                 const pixels = 640 * 640;
@@ -629,7 +651,25 @@
             }
 
             // =================================================================
-            // DETECT - DIRECT, NO EXTRA LOGIC
+            // NMS UTILS
+            // =================================================================
+            function iou(box1, box2) {
+                const x1 = Math.max(box1[0], box2[0]);
+                const y1 = Math.max(box1[1], box2[1]);
+                const x2 = Math.min(box1[2], box2[2]);
+                const y2 = Math.min(box1[3], box2[3]);
+
+                if (x2 < x1 || y2 < y1) return 0;
+
+                const intersection = (x2 - x1) * (y2 - y1);
+                const area1 = (box1[2] - box1[0]) * (box1[3] - box1[1]);
+                const area2 = (box2[2] - box2[0]) * (box2[3] - box2[1]);
+
+                return intersection / (area1 + area2 - intersection + 1e-6);
+            }
+
+            // =================================================================
+            // DETECT - ROBUST NMS
             // =================================================================
             async function detect() {
                 if (!session || !video || video.readyState < 2) return null;
@@ -638,33 +678,108 @@
                 const feeds = {};
                 feeds[session.inputNames[0]] = tensor;
 
+                // Run inference
                 const results = await session.run(feeds);
                 const outputTensor = results[session.outputNames[0]];
                 const output = outputTensor.data;
 
-                const numClasses = outputTensor.dims[1] - 4;
-                const N = outputTensor.dims[2];
+                const dims = outputTensor.dims;
+                let N, numClasses, transposed;
 
-                let bestScore = 0, bestClass = 0;
+                // Robust Shape Detection
+                if (dims[1] > dims[2]) {
+                    N = dims[1];          // Anchors
+                    numClasses = dims[2] - 4; // Classes
+                    transposed = true;
+                } else {
+                    numClasses = dims[1] - 4;
+                    N = dims[2];
+                    transposed = false;
+                }
 
-                // Find best detection
+                const stride = numClasses + 4;
+                let boxes = [];
+
+                // 1. Decode Boxes
                 for (let i = 0; i < N; i++) {
+                    let maxScore = 0;
+                    let maxClass = 0;
+
+                    // Optimization: Check objectness/max class only briefly
+                    // For typical YOLOv8, no separate objectness, so we scan classes
                     for (let c = 0; c < numClasses; c++) {
-                        const score = output[(4 + c) * N + i];
-                        if (score > bestScore) {
-                            bestScore = score;
-                            bestClass = c;
+                        let score;
+                        if (transposed) {
+                            score = output[i * stride + (4 + c)];
+                        } else {
+                            score = output[(4 + c) * N + i];
                         }
+
+                        if (score > maxScore) {
+                            maxScore = score;
+                            maxClass = c;
+                        }
+                    }
+
+                    if (maxScore > CONF_THRESHOLD) {
+                        boxes.push({
+                            // Store only what we need to avoid heavy computation here
+                            index: i,
+                            score: maxScore,
+                            classIdx: maxClass
+                        });
                     }
                 }
 
-                if (bestScore < CONF_THRESHOLD) return null;
+                if (boxes.length === 0) return null;
 
-                return { name: CLASSES[bestClass], conf: bestScore };
+                // 2. Decode coordinates ONLY for potential boxes (Optimization)
+                // This saves converting 8400 boxes when only 2 are valid
+                boxes = boxes.map(b => {
+                    let cx, cy, w, h;
+                    const i = b.index;
+
+                    if (transposed) {
+                        const offset = i * stride;
+                        cx = output[offset + 0];
+                        cy = output[offset + 1];
+                        w = output[offset + 2];
+                        h = output[offset + 3];
+                    } else {
+                        cx = output[0 * N + i];
+                        cy = output[1 * N + i];
+                        w = output[2 * N + i];
+                        h = output[3 * N + i];
+                    }
+
+                    return {
+                        box: [cx - w / 2, cy - h / 2, cx + w / 2, cy + h / 2],
+                        score: b.score,
+                        classIdx: b.classIdx
+                    };
+                });
+
+                // 3. NMS
+                boxes.sort((a, b) => b.score - a.score);
+                const finalBoxes = [];
+
+                while (boxes.length > 0) {
+                    const best = boxes.shift();
+                    finalBoxes.push(best);
+                    // Filter overlaps > 0.45 IOU
+                    boxes = boxes.filter(b => iou(best.box, b.box) < 0.45);
+                }
+
+                if (finalBoxes.length > 0) {
+                    const best = finalBoxes[0];
+                    return { name: CLASSES[best.classIdx], conf: best.score };
+                }
+
+                return null;
             }
 
             // =================================================================
-            // UI UPDATE - IMMEDIATE
+            // UI
             // =================================================================
             function updateUI(name, conf) {
                 const label = $('mudraName');
@@ -684,7 +799,6 @@
                 nameEl.textContent = name;
                 meaningEl.textContent = MEANINGS[name] || 'Double-hand mudra';
 
-                // Track unique + history
                 if (name !== lastMudra) {
                     lastMudra = name;
                     if (!uniqueMap[name]) {
@@ -714,16 +828,21 @@
             }
 
             // =================================================================
-            // DETECTION LOOP - ULTRA SIMPLE
+            // LOOP - THROTTLED
             // =================================================================
             async function loop() {
                 if (!running) return;
 
-                try {
-                    const result = await detect();
-                    updateUI(result?.name || null, result?.conf || 0);
-                } catch (e) {
-                    // Silent - just retry next frame
+                const now = Date.now();
+                // Limit FPS (Default 150ms = ~6.6 FPS)
+                if (now - lastDetectTime >= DETECTION_INTERVAL) {
+                    lastDetectTime = now;
+                    try {
+                        const result = await detect();
+                        updateUI(result?.name || null, result?.conf || 0);
+                    } catch (e) {
+                        console.error('Detection error:', e);
+                    }
                 }
 
                 if (running) requestAnimationFrame(loop);
@@ -734,7 +853,6 @@
             // =================================================================
             function start() {
                 if (!session) { alert('Model loading...'); return; }
-
                 video = $('webcam');
 
                 navigator.mediaDevices.getUserMedia({
