--- a/pages/ghost-mode.html
+++ b/pages/ghost-mode.html
@@ -63,9 +63,12 @@
 
         .mudra-name-large {
             font-family: var(--font-heading);
-            font-size: 2.5rem;
+            font-size: 3rem;
+            font-weight: 800;
             color: var(--color-primary);
             margin-bottom: var(--spacing-md);
+            text-shadow: 1px 1px 2px rgba(139, 41, 66, 0.1);
+            line-height: 1.1;
         }
 
         .nav-buttons-large {
