--- a/pages/live-detection.html
+++ b/pages/live-detection.html
@@ -251,19 +251,25 @@
 
         .current-mudra-display {
             text-align: center;
-            padding: var(--spacing-md) 0;
+            padding: var(--spacing-lg) var(--spacing-md);
+            background: linear-gradient(135deg, rgba(139, 41, 66, 0.08) 0%, rgba(212, 168, 75, 0.08) 100%);
+            border-radius: var(--radius-md);
+            margin-top: var(--spacing-sm);
         }
 
         .current-mudra-display h4 {
             font-family: var(--font-heading);
-            font-size: 1.25rem;
-            color: var(--color-dark);
-            margin-bottom: var(--spacing-xs);
+            font-size: 2.5rem;
+            font-weight: 800;
+            color: var(--color-primary);
+            margin-bottom: var(--spacing-sm);
+            text-shadow: 1px 1px 2px rgba(139, 41, 66, 0.1);
+            line-height: 1.1;
         }
 
         .current-mudra-display p {
             color: var(--color-gray);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         .stats-grid {
